name: "datagrade"
version:"0.1"
opam-version: "1.2"
license: "MIT"
maintainer: "Florian Angeletti <octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
dev-repo: "git+https://github.com/Octachron/datagrade"
homepage: "https://github.com/Octachron/datagrade"
bug-reports: "https://github.com/Octachron/datagrade/issues"

build:[
 ["jbuilder" "build" "-p" name "-j" jobs]
]

build-doc:[
  [ "jbuilder" "build" "-p" name "-j" jobs "@doc" ]
]


depends: [
  "jbuilder" {build}
  ]
